# elpa

./: .gitignore  Cargo.toml  PLAN.md  README.md  elpa.apk  package-lock.json
.github/ci/: wgpu_flutter_web_interaction_test.mjs
.github/workflows/: android-apk (1).yml  android-apk.yml  build-bytecode.yml  deploy-pages.yml  flutter-android-apk.yml  flutter-web-pages.yml
crates/elpa/: Cargo.toml
crates/elpa-renderer/: Cargo.toml
crates/elpa-renderer/src/: backend.rs  cache.rs  dirty.rs  lib.rs  manager.rs  scope.rs  wgpu_backend.rs
crates/elpa-runtime/: Cargo.toml
crates/elpa-runtime/src/: definitions.rs  host_env.rs  lib.rs  media.rs  scope.rs
crates/elpa-runtime/tests/: atlas.rs  end_to_end.rs
crates/elpa/src/: event.rs  headless.rs  lib.rs  surface.rs
crates/elpa/tests/: governance.rs
examples/flutter/: README.md
examples/game3d/: README.md
examples/liquidglass/: Cargo.toml  README.md
examples/liquidglass/assets/: calculator.bc  calculator.js  demo.bc
examples/liquidglass/assets/sdk/: 00-data.js  10-engine.js  30-widgets-layout.js  31-widgets-glass.js  40-runtime.js  50-api.js
examples/liquidglass/src/: lib.rs
examples/liquidglass/tests/: bench.rs  calculator.rs  run.rs
examples/material/: Cargo.toml  README.md
examples/material/assets/: demo.ast.json  demo.bc  demo.js  elpa-material.ast.json  elpa-material.js  gallery.bc  gallery.js  graphics.bc  graphics.js  graphics_parallel.js
examples/material/assets/sdk/: 00-data.js  10-engine.js  20-widget.js  30-widgets-layout.js  31-widgets-material.js  32-widgets-media.js  33-graphics.js  40-runtime.js  50-api.js
examples/material/src/: lib.rs
examples/material/tests/: bench.rs  bytecode.rs  fling.rs  font.rs  gallery.rs  graphics.rs  graphics_parallel.rs  media.rs  responsive.rs  run.rs  safearea.rs  svgtext.rs  video.rs
examples/native/: Cargo.toml  README.md  build-linux-native.sh
examples/native/src/: app_ast.rs  lib.rs  main.rs
examples/sdk/: Cargo.toml
examples/web/: Cargo.toml  README.md  build-linux.sh  index.html  serve.html
examples/web/src/: app_ast.rs  lib.rs
examples/websdk/: Cargo.toml  README.md
examples/websdk/assets/: demo.bc  demo.js
examples/websdk/assets/sdk/: 00-data.js  10-engine.js  15-css.js  20-node.js  30-layout.js  40-elements.js  50-runtime.js  60-api.js
examples/websdk/src/: lib.rs
examples/websdk/tests/: run.rs
flutter/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
flutter/lib/: elpa.dart  main.dart
flutter/native/: README.md
flutter/rust/: Cargo.toml
flutter/rust/src/: engine.rs  import.rs  lib.rs  render.rs
flutter/rust/src/api/: mod.rs
flutter/rust/tests/: demo_app.rs
flutter/test/: elpa_shell_test.dart
flutter/tools/: coi-serviceworker.js  web_interaction_test.mjs  web_smoke_test.mjs
rust/: Cargo.toml  PLAN.md  README.md  package-lock.json  package.json
rust/crates/elpa/: Cargo.toml
rust/crates/elpa-protocol/: Cargo.toml
rust/crates/elpa-protocol/src/: definition.rs  geometry.rs  hostcall.rs  lib.rs  scene.rs  scope.rs
rust/crates/elpa-renderer/: Cargo.toml
rust/crates/elpa-renderer/src/: backend.rs  dirty.rs  lib.rs  manager.rs  scene_backend.rs  scene_renderer.rs  scope.rs  vello_backend.rs  wgpu_backend.rs
rust/crates/elpa-renderer/tests/: cube_render.rs
rust/crates/elpa/src/: headless.rs  headless_scene.rs  host_message.rs  lib.rs
rust/crates/elpa/tests/: governance.rs  vello_sdk.rs  workers_fps.rs
rust/crates/elpa/tests/assets/: vello_flutter_demo.js
rust/examples/flutter/: Cargo.toml  README.md
rust/examples/flutter/assets/: demo.bc  demo.js
rust/examples/flutter/assets/sdk/: 00-data.js  10-engine.js  20-ui.js  30-rendering.js  40-widget.js  50-widgets.js  52-scroll.js  60-binding.js
rust/examples/flutter/src/: lib.rs
rust/examples/flutter/tests/: bc.rs  bench.rs  native_text.rs  run.rs
rust/examples/game3d/: Cargo.toml  README.md
rust/examples/game3d/assets/: demo.js
rust/examples/game3d/assets/sdk/: 10-core.js  50-physics.js  75-overlay.js
rust/examples/game3d/src/: lib.rs
rust/examples/game3d/tests/: run.rs
rust/examples/material/: Cargo.toml  README.md
rust/examples/material/assets/: demo.bc  demo.js  gallery.js  graphics.bc  graphics_field_worker.js
rust/examples/material/assets/sdk/: 30-widgets-layout.js  31-widgets-material.js  32-widgets-media.js  40-runtime.js  50-api.js
rust/examples/material/src/: lib.rs
rust/examples/material/tests/: fling.rs  font.rs  gallery.rs  graphics.rs  run.rs  safearea.rs  svgtext.rs
rust/examples/native/: Cargo.toml  README.md
rust/examples/native/src/: lib.rs
rust/examples/sdk/: Cargo.toml  README.md
rust/examples/sdk/assets/: elpa-sdk.ast.json
rust/examples/sdk/tests/: run.rs
rust/examples/web/: Cargo.toml  README.md
rust/examples/web/src/: lib.rs
rust/scripts/: README.md  gen_demo_models.py  web-drawer-perf.js  web-e2e.js  (+1 more)
rust/tools/create-elpa-app/: Cargo.toml  README.md
rust/tools/create-elpa-app/src/: builder.rs  install.rs  main.rs  manifest.rs  scaffold.rs  serve.rs  transpile.rs
rust/tools/create-elpa-app/src/runtime/: prelude.js
rust/tools/create-elpa-app/templates/_engine/: Cargo.toml
rust/tools/create-elpa-app/templates/flutter/: README.md  demo_app.rs  elpa.json  package.json  tsconfig.json
rust/tools/create-elpa-app/templates/flutter/ts/: app.ts  cards.ts  elpa.d.ts  main.ts  page.ts  ui.ts
rust/tools/create-elpa-app/templates/wgpu/: README.md  elpa.json  gitignore  package.json  tsconfig.json
rust/tools/create-elpa-app/templates/wgpu-flutter/: README.md  elpa.json  main.js
rust/tools/create-elpa-app/templates/wgpu-flutter/ts/: cards.ts  elpa.d.ts  main.ts  page.ts  scene.ts
rust/tools/create-elpa-app/templates/wgpu/app/: Cargo.toml
rust/tools/create-elpa-app/templates/wgpu/app/assets/: demo.js
rust/tools/create-elpa-app/templates/wgpu/app/src/: main.rs
rust/tools/create-elpa-app/templates/wgpu/app/ts/: elpa.d.ts  hud.ts  main.ts  scene.ts  sim.ts  theme.ts
scripts/: web-e2e.sh  web-frame-perf.js  web-inspect.js  web-scenarios-perf.js
(+108 files in other folders)
