[workspace]
resolver = "2"
members = [
    "crates/elpian-vm",
    "crates/elpa-protocol",
    "crates/elpa-renderer",
    "crates/elpa-runtime",
]

# Shared release profile tuned for the shipped configuration: small, fast
# binaries on native and a compact wasm module on the web.
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
