[workspace]
resolver = "2"
members = [
    "crates/elpian-vm",
    "crates/elpa-protocol",
    "crates/elpa-renderer",
    "crates/elpa-runtime",
    "crates/elpa",
    "examples/sdk",
    "examples/material",
]

# The web example pulls in wgpu + web-sys and only targets wasm; keep it out of
# the default `cargo build/test --workspace` so the core stays fast and green.
# Build it explicitly per `examples/web/README.md`.
exclude = ["examples/web"]

# Shared release profile tuned for the shipped configuration: small, fast
# binaries on native and a compact wasm module on the web.
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
