[workspace]
resolver = "2"
members = [
    "crates/elpian-vm",
    "crates/elpa-protocol",
    "crates/elpa-renderer",
    "crates/elpa-runtime",
    "crates/elpa",
    "examples/sdk",
    "examples/material",
]

# The web example pulls in wgpu + web-sys and only targets wasm; keep it out of
# the default `cargo build/test --workspace` so the core stays fast and green.
# Build it explicitly per `examples/web/README.md`.
exclude = ["examples/web"]

# Shared release profile tuned for the shipped configuration: small, fast
# binaries on native and a compact wasm module on the web.
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
# `runtime-rng` (an ahash default) pulls `getrandom`, whose wasm32-unknown-unknown
# backend needs extra build configuration and broke the web build. These maps are
# internal (object fields, resource ids) and never exposed to adversarial key
# streams, so HashDoS-resistant random seeding buys nothing here — the same
# rationale as the VM's FxHasher. Disable it and use ahash's fixed compile-time
# seeds, which also drops the getrandom dependency entirely.
ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
