[package]
name = "elpa-renderer"
version = "0.1.0"
edition = "2021"
description = "Elpa renderer: resource caching, dirty-rect partial rendering, and the live wgpu backend that maps the JSON command tree onto the wgpu API."

[features]
default = []
# The live wgpu backend. Heavy (pulls the full graphics stack); off by default so
# the caching/partial-render logic builds and tests fast and GPU-free.
wgpu-backend = ["dep:wgpu", "dep:base64"]

[dependencies]
elpa-protocol = { path = "../elpa-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
xxhash-rust = { workspace = true }
wgpu = { version = "29", optional = true }
base64 = { version = "0.22", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
