[package]
name = "elpa-runtime"
version = "0.1.0"
edition = "2021"
description = "The Elpa host runtime: drives the Elpian VM's pause/resume host-call loop, routes `render` payloads into the renderer, and feeds input events back into the VM."

[dependencies]
elpian-vm = { path = "../elpian-vm" }
elpa-protocol = { path = "../elpa-protocol" }
elpa-renderer = { path = "../elpa-renderer" }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
xxhash-rust = { workspace = true }
fontdue = "0.9"
base64 = "0.22"
bumpalo = "3.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simd-json = "0.13"
# Image + animation decoding for the async media subsystem (PNG/JPEG stills and
# animated GIF "video"). A lean codec set keeps the wasm build small; decoding
# runs off the render thread on native and inline on wasm.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
