[package]
name = "elpa-native-example"
version = "0.1.0"
edition = "2021"
description = "Native Linux example: creates a window with winit and runs an Elpa instance."

[dependencies]
elpa = { path = "../../crates/elpa", features = ["wgpu"] }
winit = "0.30"
pollster = "0.3"
serde_json = "1.0"
wgpu = "29"
env_logger = "0.10"

[profile.release]
opt-level = 3

[workspace]
