[package]
name = "elpa-native-example"
version = "0.1.0"
edition = "2021"
description = "Cross-platform example: a winit window running the Elpa Material SDK demo. Builds for desktop (Windows/macOS/Linux) and Android from one codebase."

# A library (used by the desktop binary and built as a `cdylib` for Android) plus
# the desktop binary entry point.
[lib]
name = "elpa_native_example"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "elpa-native-example"
path = "src/main.rs"

[features]
default = []
# Embed the Game3D engine demo (a lit, animated 3D scene from the object-oriented
# `elpa-game3d` SDK) instead of the Material gallery. Build/run with
# `cargo run --features game3d`.
game3d = []
# Embed the Liquid Glass UI kit demo (Apple iOS-26 glass material from the
# object-oriented `elpa-liquidglass` SDK) instead. Build/run with
# `cargo run --features liquidglass`.
liquidglass = []

[dependencies]
elpa = { path = "../../crates/elpa", features = ["wgpu"] }
elpa-material = { path = "../material" }
winit = "0.30"
pollster = "0.3"
# `wgpu`'s default features bring in the native backends: DX12 (Windows),
# Vulkan/GLES (Android, Linux), Metal (macOS).
wgpu = "29"
log = "0.4"
env_logger = "0.10"
ureq = "3"

# Android-only: winit's Android activity glue and a logcat-backed logger.
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
android_logger = "0.13"

[profile.release]
opt-level = 3
lto = true
# Strip symbols so the shipped library (and the packaged APK) stay small.
strip = true

# --- cargo-apk (APK packaging) -------------------------------------------------
# `cargo install cargo-apk` then `cargo apk build --release` from this directory
# (with ANDROID_HOME + ANDROID_NDK_HOME set) produces an installable APK.
[package.metadata.android]
package = "org.cosmopole.elpa"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 30

[package.metadata.android.application]
label = "Elpa Material"

# Network access. The Elpa host grants the sandbox the `network` toggle and a
# blocking fetcher (see `src/lib.rs`), but on Android an app also needs the
# platform INTERNET permission or every socket call fails with EPERM — so the
# gallery's `f`-key `useFont(url)` download (and any `httpGet`) only works once
# this is declared in the manifest. The font/test URLs are HTTPS
# (cdn.jsdelivr.net, example.com), so no cleartext-traffic exception is needed.
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[workspace]
