[package]
name = "elpa-web-example"
version = "0.1.0"
edition = "2021"
description = "Web example: runs an Elpa app and draws its wgpu frames to a full-window, DPI-aware HTML canvas."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
elpa = { path = "../../crates/elpa", features = ["wgpu"] }
# The Material Design 3 UI-kit SDK, shipped as JavaScript; this crate only embeds
# those assets (`MODULE_JS` / `DEMO_JS`) and builds an Elpa instance from them
# with `new_from_js`. The interactive demo it carries is what the page renders.
elpa-material = { path = "../material" }
wgpu = { version = "29", features = ["webgl"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "PointerEvent",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
]

[profile.release]
opt-level = "s"
lto = true
