[package]
name = "elpa-web-example"
version = "0.1.0"
edition = "2021"
description = "Web example: runs an Elpa app and draws its wgpu frames to a full-window, DPI-aware HTML canvas."
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Embed the Game3D engine demo (a lit, animated 3D scene from the object-oriented
# `elpa-game3d` SDK) instead of the Material gallery. Build with
# `trunk build --features game3d`.
game3d = []
# Embed the Liquid Glass UI kit demo (Apple iOS-26 glass material from the
# object-oriented `elpa-liquidglass` SDK) instead. Build with
# `trunk build --features liquidglass`.
liquidglass = []
# Embed the Liquid Glass calculator (a feature-rich scientific calculator built
# on the `elpa-liquidglass` SDK) instead. Build with
# `trunk build --features calculator`.
calculator = []
# Embed the Web SDK showcase page (the HTML element model + CSS engine from the
# object-oriented `elpa-websdk` kit, rendered through one instanced SDF pipeline)
# instead. Build with `trunk build --features websdk`.
websdk = []
# Embed the Flutter SDK demo (a faithful, layered Flutter port — dart:ui Canvas,
# RenderObject/RenderBox layout, Widget/Element reconciliation — from the
# `elpa-flutter` kit) instead. Build with `trunk build --features flutter`.
flutter = []

[dependencies]
elpa = { path = "../../crates/elpa", features = ["wgpu"] }
# The Material Design 3 framework + app, shipped as JavaScript; this crate links
# them with `elpa_material::program()` and builds an Elpa instance with
# `new_from_js`. The interactive app it carries is what the page renders.
elpa-material = { path = "../material" }
wgpu = { version = "29", features = ["webgl"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "Performance",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "PointerEvent",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "XmlHttpRequest",
]

[profile.release]
opt-level = "s"
lto = true
