[package]
name = "elpa-renderer"
version = "0.1.0"
edition = "2021"
description = "Elpa renderer: resource caching, dirty-rect partial rendering, and the live wgpu backend that maps the JSON command tree onto the wgpu API."

[features]
default = []
# The live wgpu backend. Heavy (pulls the full graphics stack); off by default so
# the caching/partial-render logic builds and tests fast and GPU-free.
wgpu-backend = ["dep:wgpu", "dep:base64"]
# The live Vello scene backend: rasterizes the high-level scene ops to a wgpu
# surface using Vello's *own* (separately versioned) wgpu. It does **not** pull
# the `wgpu-backend`: that links a second, host-versioned wgpu, which on wasm
# makes two crates emit the web-sys WebGPU bindings and breaks wasm-bindgen with
# duplicate string enums. The embedded-raw-wgpu (`SceneOp::RawWgpu`) compositing
# path runs through a host-supplied `RawHandler` on Vello's device, so it needs no
# host wgpu here; a host that uses it enables `wgpu-backend` itself. Off by default
# so the scene orchestration builds and tests GPU-free against the mock backend.
vello-backend = ["dep:vello", "dep:log", "dep:base64"]

[dependencies]
elpa-protocol = { path = "../elpa-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
xxhash-rust = { workspace = true }
bumpalo = { version = "3.16", features = ["collections"] }
wgpu = { version = "29", optional = true }
base64 = { version = "0.22", optional = true }
# Vello provides the high-level 2D scene rasterizer. Pinned to the release that
# tracks this workspace's wgpu; only compiled under `vello-backend`.
vello = { version = "0.5", optional = true }
# Diagnostics for the live scene path (surface setup + per-frame render errors),
# surfaced through the host's logger (e.g. logcat on Android).
log = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[dev-dependencies]
pollster = "0.4"
