[package]
name = "elpa-game3d"
version = "0.1.0"
edition = "2021"
description = "A 3D game-making SDK delivered as JavaScript (assets/sdk/*.js) that Elpa compiles and runs directly on its VM. A clean, object-oriented engine: a scene-graph, perspective/orthographic cameras, directional/point lights, primitive + glTF/GLB geometry, PBR-ish materials, a forward Blinn-Phong renderer, and a physics layer (AABB/sphere volumes, ray casting, collision). Importable via the host's `Elpa::new_from_js` / `Elpa::new_from_bytecode`."

[lib]
name = "elpa_game3d"

[dependencies]
# The SDK ships as JavaScript source strings only; the library itself needs no
# deps. The `build_bytecode` binary (a build-time tool) lowers those programs to
# VM bytecode via the VM's compiler front-end — a light, GPU-free dependency.
elpian-vm = { path = "../../crates/elpian-vm" }

# The build-time bytecode generator. Run `cargo run -p elpa-game3d --bin
# build_bytecode` to (re)compile the SDK's JS programs to `assets/*.bc`, which the
# web/native examples can embed and load via `Elpa::new_from_bytecode`.
[[bin]]
name = "build_bytecode"
path = "src/bin/build_bytecode.rs"

[dev-dependencies]
# Drive the engine end to end through a real (headless) Elpa instance + VM, and
# lower the SDK's JS to AST so its embedded WGSL can be validated.
elpa = { path = "../../crates/elpa" }
# Validate the engine's WGSL the same way wgpu does, so shader errors (reserved
# keywords, syntax, type mismatches) are caught in `cargo test` without a GPU.
naga = { version = "29", features = ["wgsl-in"] }
serde_json = { workspace = true }
