[package]
name = "elpa-web-example"
version = "0.1.0"
edition = "2021"
description = "Web example: runs an Elpa app and draws its wgpu frames to a full-window, DPI-aware HTML canvas."
publish = false

[lib]
crate-type = ["cdylib"]

[features]
# The default build (Material gallery) and every app *except* Flutter draw
# through the wgpu `gpu.submit` SDF pipeline, so they link the live wgpu backend;
# `webgl` (on by default) pulls it. The Flutter SDK draws through the Vello scene
# path instead and must be built WITHOUT the host wgpu
# (`trunk build --no-default-features --features flutter`) so only Vello's own
# wgpu is linked — two wgpu versions both emitting web-sys WebGPU bindings make
# wasm-bindgen fail with "duplicate string enums".
default = ["webgl"]
# The live wgpu backend (the SDF `gpu.submit` path) on a canvas WebGL/WebGPU
# surface. Every app but Flutter needs it; Flutter omits it.
webgl = ["dep:wgpu", "elpa/wgpu"]
# Embed the Game3D engine demo (a lit, animated 3D scene from the object-oriented
# `elpa-game3d` SDK) instead of the Material gallery. Build with
# `trunk build --features game3d`.
game3d = []
# Embed the Liquid Glass UI kit demo (Apple iOS-26 glass material from the
# object-oriented `elpa-liquidglass` SDK) instead. Build with
# `trunk build --features liquidglass`.
liquidglass = []
# Embed the Liquid Glass calculator (a feature-rich scientific calculator built
# on the `elpa-liquidglass` SDK) instead. Build with
# `trunk build --features calculator`.
calculator = []
# Embed the Web SDK showcase page (the HTML element model + CSS engine from the
# object-oriented `elpa-websdk` kit, rendered through one instanced SDF pipeline)
# instead. Build with `trunk build --features websdk`.
websdk = []
# Embed the Flutter SDK demo (a faithful, layered Flutter port — dart:ui Canvas,
# RenderObject/RenderBox layout, Widget/Element reconciliation — from the
# `elpa-flutter` kit) instead. Build with `trunk build --features flutter`.
# The kit draws through the Vello scene path, so this pulls in (and installs) the
# live `VelloSceneBackend`, which rasterizes on WebGPU (no WebGL fallback).
flutter = ["elpa/vello"]

[dependencies]
elpa = { path = "../../crates/elpa", default-features = false }
# The Material Design 3 framework + app, shipped as JavaScript; this crate links
# them with `elpa_material::program()` and builds an Elpa instance with
# `new_from_js`. The interactive app it carries is what the page renders.
elpa-material = { path = "../material" }
# The host wgpu, pulled only by the `webgl` feature (every app but Flutter); the
# Flutter build links Vello's own wgpu instead. See the `[features]` note.
wgpu = { version = "29", features = ["webgl"], optional = true }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "Performance",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "PointerEvent",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "XmlHttpRequest",
]

[profile.release]
opt-level = "s"
lto = true
