[package]
name = "create-elpa-app"
version = "0.1.0"
edition = "2021"
description = "Scaffold a new Elpa application from a template (wgpu, flutter, or wgpu-flutter)."
publish = false

[[bin]]
name = "create-elpa-app"
path = "src/main.rs"

# Zero external dependencies: the tool is pure std so it builds fast and runs
# anywhere a Rust toolchain exists, with no network fetch.
